# OpenGL-Starter

./: .gitignore  LICENSE  OpenGL.sln  README.md
OSX_64-bit/: main  main.cpp
OSX_64-bit/Dependencies/glad/include/glad/: glad.h
OSX_64-bit/Dependencies/glad/src/: glad.c
OSX_64-bit/main.dSYM/Contents/Resources/DWARF/: main
OpenGL/: OpenGL.vcxproj
OpenGL/src/: Application.cpp
Windows_64-bit/OpenGL/: OpenGL.vcxproj
Windows_64-bit/OpenGL/src/: Application.cpp
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
linux/: CMakeLists.txt  README.md
linux/src/: main.cpp
osx/: CMakeLists.tsx
windows/: CMakeLists.txt
windows/src/: main.cpp
